styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --yellow: #f9ab11;
  --orange: #f42;
  --red: #de0012;
  --grey: #736f72;
  --pink: #faaea0;
  --white: #fff;
  --black: #000;
  --light-orange: rgba(255, 68, 34, 0.08);
  --lighter-orange: rgba(237, 233, 232);
}

html {
  margin: 0;
  font-size: 15px;
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0 1em 0 1em;
}

.wrapper {
  display: grid;
  grid-template-rows: 50px 600px 98% 1%;
  row-gap: 15px;
  font-family: 'Roboto', sans-serif;
  grid-template-areas:
    "main-header"
    "row-1"
    "row-section"
    "main-footer";
}

.main-header {
  display: grid;
  grid-row: 1/2;
  grid-template-columns: 1fr;
  grid-template-rows: 50px;
  width: 100%;
  background-color: #eee;
  grid-area: main-header;
  position: absolute;
  grid-template-areas: "header-row-1";
}

.header-row-1 {
  display: flex;
  justify-content: space-between;
  grid-column: 1/-1;
  grid-row: 1/2;
  grid-template-rows: 50px 100px;
  grid-area: header-row-1;
  grid-template-areas: "header-row1-section-1  icon-div";
}

.header-row1-section-00 {
  display: none;
}

.header-row1-section-2 {
  display: grid;
  grid-template-columns: 20% 60% 20%;
  border-bottom: 0.5px solid lightgray;
  grid-area: header-row1-section-2;
  grid-template-areas: "header-row1-section-1 . icon-div";
}

.header-row1-section-1 {
  display: grid;
  grid-column: 1/2;
  grid-area: header-row1-section-1;
  background-color: var(--black);
  color: white;
  font-weight: bold;
  width: 4em;
  text-align: center;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  color: var(--black);
  cursor: pointer;
  text-decoration: none;
}

.header-row1-section-1 > a {
  color: white;
  padding: 1em;
}

.header-row1-section-2-1 {
  display: none;
  justify-content: space-between;
  grid-area: header-row1-section-2-1;
}

.icon-div {
  display: flex;
  justify-content: flex-end;
  height: 100%;
  margin-right: 0.5em;
  grid-area: icon-div;
}

.icon {
  border: 1px solid #eee;
  padding: 10px 10px;
}

.header-row-2 {
  display: none;
}

.row-section {
  display: grid;
  grid-row: 2/3;
  gap: 15px;
  width: 98%;
  margin-left: auto;
  margin-right: auto;
  grid-template-rows: 50em 50em 67em 400em 50em;
  grid-area: row-section;
  grid-template-areas:
    "row-2"
    "row-3"
    "row-4"
    "row-5";
}

.row-1 {
  display: grid;
  grid-row: 1/2;
  grid-template-rows: repeat(3, 220px);
  gap: 10px;
  padding: 8px;
  grid-area: row-1;
  grid-template-areas:
    "row1-section-1"
    "row1-section-2"
    "row1-section-3";
}

.row-top :nth-child(1) {
  color: white;
}

.row-top > p {
  color: white;
  font-size: 2em;
  font-weight: bold;
}

.row-bottom {
  display: flex;
  color: white;
  margin:5px;
}

.row-bottom i {
  margin-left: 5px;
}
.row-bottom:hover {
  cursor: pointer;
  color: white;
}

.row1-section-1 {
  grid-row: 1/2;
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;


  background:
  linear-gradient(
    rgba(255, 0, 0, 0.45),
    rgba(31, 17, 17, 0.45)
  ),
  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/transparency-796x524.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  grid-area: row1-section-1;
}


.row1-logo {
  width: 20em;
  margin:13px;
}

.row1-section-2 {
  grid-row: 2/3;
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background:
  linear-gradient(
    rgba(206, 205, 205, 0.45),
    rgba(10, 8, 8, 0.45)
  ),
  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/Untitled-design-2020-11-17T120921.079-796x417.png);
  grid-area: row1-section-2;
}

.row1-section-3 {
  grid-row: 3/4;
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background:
  linear-gradient(
    rgba(206, 205, 205, 0.45),
    rgba(10, 8, 8, 0.45)
  ),
  url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/11/image-796x417.png);
  grid-area: row1-section-3;
}

.row-2 {
  display: grid;
  grid-row: 2/3;
  grid-template-rows: 30px  repeat(8, 100px);
  font-size: 1.2rem;
  grid-gap: 15px;
  grid-area: row-2;
  padding: 5px;
  grid-template-areas:
    "row2-section-1"
    "row2-section-2"
    "row2-section-3"
    "row2-section-4"
    "row2-section-5"
    "row2-section-6"
    "row2-section-7"
    "row2-section-8"
    "row2-section-9";
}

.row2-section-1 {
  display: grid;
  grid-row: 1/2;
  color: var(--orange);
  font-size: 1.3rem;
  font-weight: 700;
  align-items: center;
  grid-area: row2-section-1;
}

.row2-section-1 a {
  color: var(--orange);
}

.row2-section-2,
.row2-section-3,
.row2-section-4,
.row2-section-5,
.row2-section-6,
.row2-section-7,
.row2-section-8,
.row2-section-9 {
  display: grid;
  justify-items: start;
  grid-template-columns: 7em 13em;
  grid-template-rows: 1fr;
  grid-template-areas: "row-image row-text";
}

.row-image {
  grid-column: 1/2;
  width: 7em;
  height: 5em;
  grid-area: row-image;
}

.row-text {
  color: black;
  grid-column: 2/4;
  grid-area: row-text;
  /* display: flex;
  flex-direction: column;
  justify-content: space-between; */
}

.row-text :nth-child(1) {
  font-weight: bold;
  font-size: 0.8em;
}

.row-text :nth-child(2) {
  color: gray;
  font-size: 0.8em;
}

.footer-icons > a {
  color: white;
  border: 1px solid var(--black);
  border-radius: 50%;
  padding: 0.6em;
  background-color: var(--grey);
}

.footer-section2 > a {
  color: white;
  padding: 2px;
  width: 75%;
}

.row3-section-2 > a {
  font-weight: 700;
}

.row2-section-2 {
  display: grid;
  grid-row: 2/3;
  grid-area: row2-section-2;
}

.row2-section-3 {
  display: grid;
  grid-row: 3/4;
  grid-area: row2-section-3;
}

.row2-section-4 {
  display: grid;
  grid-row: 4/5;
  grid-area: row2-section-4;
}
/* ... */

